Fixed notificacion delay

--- a/examples/test/app/resources/sections/notification.html
+++ b/examples/test/app/resources/sections/notification.html
@@ -12,6 +12,8 @@
             <a href="#" class="button big green" data-label="Success" data-action="success"></a>
             <a href="#" class="button big red" data-label="Error" data-action="error"></a>
             <a href="#" class="button big yellow" data-label="Alert" data-action="alert"></a>
+
+            <a href="#" class="button big blue" data-label="Chaining" data-action="chaining"></a>
         </div>
     </article>
 </section>
