Minimal changes on markup

--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -61,9 +61,8 @@
             </div>
         </header>
 
-        <article id="art-1" data-loading="black"></article>
-        <article id="art-2" data-loading="white"></article>
-        <article id="art-3" data-loading="black"></article>
+        <article id="art-1" data-loading="black">
+        </article>
     </section>
 
     <!-- Lungo dependencies -->
