--- a/examples/test/app/resources/asides/features.html
+++ b/examples/test/app/resources/asides/features.html
@@ -2,22 +2,6 @@
     <header data-title="Features"></header>
     <article class="list scroll">
         <ul>
-            <li>
-                <a href="#art-1" data-target="article">
-                    <strong>Art-1</strong>
-                </a>
-            </li>
-            <li>
-                <a href="#art-2" data-target="article">
-                    <strong>Art-2</strong>
-                </a>
-            </li>
-            <li>
-                <a href="#art-3" data-target="article">
-                    <strong>Art-3</strong>
-                </a>
-            </li>
-
             <!-- Basic Layout -->
             <li>
                 <a href="#list" data-target="section">
@@ -57,8 +41,8 @@
 
             <!-- Grid System -->
             <li>
-                <a href="#" data-target="section">
-                    <div class="bubble right">8</div>
+                <a href="#grid" data-target="section">
+                    <div class="bubble right">2</div>
                     <strong>Grid System</strong>
                     <small>Indented, Scroll</small>
                 </a>
