--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -61,6 +61,7 @@
             </div>
         </header>
 
+
         <article id="art-1" data-loading="black">
         </article>
     </section>
@@ -108,7 +109,7 @@
             version: '2.0',
             sugars: ['map', 'pull'],
             resources: {
-                sections: [ 'notification.html', 'list.html', 'icon.html'],
+                sections: [ 'notification.html', 'list.html', 'icon.html', 'grid.html'],
                 templates: [],
                 asides: ['features.html', 'profiles.html']
             }
