Remove unnecesary  files

--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -14,10 +14,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <!-- For iPhone 4 with high-resolution Retina display: -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/icon@2x.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/icon-72.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png">
-    <link rel="apple-touch-startup-image" href="assets/images/default.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://lungo.tapquo.com/resources/icon@2x.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://lungo.tapquo.com/resources/icon-72.png">
+    <link rel="apple-touch-icon-precomposed" href="http://lungo.tapquo.com/resources/icon.png">
+    <link rel="apple-touch-startup-image" href="http://lungo.tapquo.com/resources/default.png">
 
     <meta http-equiv="cleartype" content="on">
 
@@ -38,6 +38,8 @@
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.icon.brand.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.loading.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.notification.css">
+
+
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.scaffold.css">
     <!--
     <link rel="stylesheet" href="../../release/lungo.css">
@@ -45,7 +47,9 @@
     <link rel="stylesheet" href="../../release/lungo.theme.scaffold.css">
     -->
     <!-- App Stylesheet -->
+    <!--
     <link rel="stylesheet" href="assets/stylesheets/app.css">
+-->
 </head>
 
 <body class="app">
@@ -61,6 +65,13 @@
             </div>
         </header>
 
+        <footer>
+            <nav>
+                <a href="#" data-icon="info"></a>
+                <a href="#" data-icon="user"></a>
+                <a href="#" data-icon="mail"></a>
+            </nav>
+        </footer>
 
         <article id="art-1" data-loading="black">
         </article>
