New footer dimensions and stylesheet ".with-labels"

--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -59,6 +59,9 @@
             <nav class="left">
                 <a href="#features" data-target="aside" data-icon="menu"></a>
             </nav>
+            <nav class="right">
+                <a href="#" data-loading="white" data-icon="user"></a>
+            </nav>
             <div class="left">
                 <span class="title with-subtitle">Lungo Framework</span>
                 <span class="subtitle">version 2.0</span>
@@ -66,10 +69,11 @@
         </header>
 
         <footer>
-            <nav>
-                <a href="#" data-icon="info"></a>
+            <nav class="with-labelss">
+                <a href="#" class="current" data-label="Inicio" data-icon="info"></a>
+                <a href="#" data-icon="user" data-count="3"></a>
                 <a href="#" data-icon="user"></a>
-                <a href="#" data-icon="mail"></a>
+                <a href="#" data-icon="mail" data-label="Cuenta" data-count="3" ></a>
             </nav>
         </footer>
 
