New aside kitchenSink

--- a/examples/test/app/resources/asides/features.html
+++ b/examples/test/app/resources/asides/features.html
@@ -13,8 +13,7 @@
 
             <!-- List -->
             <li>
-                <a href="#list" data-target="section">
-                    <div class="bubble right">8</div>
+                <a href="#list" data-target="section" data-count="3">
                     <strong>Lists</strong>
                     <small>Indented, Scroll</small>
                 </a>
@@ -59,7 +58,7 @@
 
             <!-- Asides -->
             <li>
-                <a href="#" data-target="section">
+                <a href="#aside" data-target="section">
                     <div class="bubble right">8</div>
                     <strong>Asides</strong>
                     <small>Indented, Scroll</small>
