--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -129,7 +129,7 @@
             version: '2.0',
             sugars: ['map', 'pull'],
             resources: {
-                sections: [ 'notification.html', 'list.html', 'icon.html', 'grid.html', 'form.html'],
+                sections: [ 'notification.html', 'list.html', 'icon.html', 'grid.html', 'form.html', 'aside.html'],
                 templates: [],
                 asides: ['features.html', 'profiles.html']
             }
