Changes on default stylesheet

--- a/examples/test/app/resources/asides/features.html
+++ b/examples/test/app/resources/asides/features.html
@@ -3,8 +3,8 @@
     <article class="list scroll">
         <ul>
             <!-- Basic Layout -->
-            <li>
-                <a href="#list" data-target="section">
+            <li class="current">
+                <a href="#list" class="current" data-target="section">
                     <div class="bubble right">8</div>
                     <strong>Layout</strong>
                     <small>Indented, Scroll</small>
