--- a/examples/test/app/resources/sections/form.html
+++ b/examples/test/app/resources/sections/form.html
@@ -1,7 +1,15 @@
 <section id="form" data-transition="slide">
     <header data-title="Form Elements" data-back="home"></header>
 
-    <article class="list scroll">
+
+    <footer>
+        <nav class="with-labels">
+            <a href="#form-normal" data-target="article" class="current" data-icon="user" data-label="Normal" data-count="5"></a>
+            <a href="#form-extra" data-target="article" data-icon="users" data-label="Extra" data-count="2"></a>
+
+        </nav>
+    </footer>
+    <article id="form-normal" class="list  indented">
         <ul>
             <li>
                 <label>Example of text</label>
@@ -31,7 +39,12 @@
                 <label>Do you like Lungo forms?</label>
                 <label class="checkbox right"><input type="checkbox" id="checkbox-0" checked/></label>
             </li>
+        </ul>
 
+    </article>
+
+    <article id="form-extra" class="list  indented">
+        <ul>
             <li class="padding">
                 <label>Example of progress</label>
                 <div id="progress-normal" data-progress="25%"></div>
