--- a/examples/test/app/resources/sections/form.html
+++ b/examples/test/app/resources/sections/form.html
@@ -1,16 +1,12 @@
 <section id="form" data-transition="slide">
-    <header data-title="Form Elements" data-back="home"></header>
+    <header data-back="home button" data-title="Form Elements"></header>
 
-
-    <footer>
-        <nav class="with-labels">
-            <a href="#form-normal" data-target="article" class="current" data-icon="user" data-label="Normal" data-count="5"></a>
-            <a href="#form-extra" data-target="article" data-icon="users" data-label="Extra" data-count="2"></a>
-
-        </nav>
-    </footer>
-    <article id="form-normal" class="list  indented">
+    <article class="list scroll">
         <ul>
+            <li class="contrast">
+                    <input type="search" placeholder="type your search" />
+                    <a href="#" class="button theme" data-icon="search"></a>
+                </li>
             <li>
                 <label>Example of text</label>
                 <input type="text" placeholder="type your name" />
@@ -29,22 +25,10 @@
                     </select>
                 </label>
             </li>
-            <li class="padding">
-                <label>Example of radio</label>
-                <br/>
-                <label class="radio"><input type="radio" name="group-0" id="radio-0" checked="checked"/></label>
-                <label class="radio"><input type="radio" name="group-0" id="radio-1"/></label>
-            </li>
             <li  class="padding">
                 <label>Do you like Lungo forms?</label>
                 <label class="checkbox right"><input type="checkbox" id="checkbox-0" checked/></label>
             </li>
-        </ul>
-
-    </article>
-
-    <article id="form-extra" class="list  indented">
-        <ul>
             <li class="padding">
                 <label>Example of progress</label>
                 <div id="progress-normal" data-progress="25%"></div>
