Aside manager & stylesheet

--- a/examples/test/app/resources/sections/aside.html
+++ b/examples/test/app/resources/sections/aside.html
@@ -1,10 +1,9 @@
-<section id="aside" class="extended">
+<section id="asides">
     <header data-back="home" data-title="Aside"></header>
-
-    <nav class="grooupbar">
-        <a href="#" data-icon="left" data-label="Left"></a>
-        <a href="#" data-icon="right" data-label="Right"></a>
-    </nav>
-
-    <article></article>
+    <article id="aside-example" class="indented">
+        <div>
+            <a href="#left" data-target="aside" data-icon="left" class="button big blue">Example of normal aside</a>
+            <a href="#right" data-target="aside" data-icon="right" class="button big red">Example of mini right aside</a>
+        </div>
+    </article>
 </section>
