--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -153,7 +153,7 @@
             resources: {
                 sections: [ 'notification.html', 'list.html', 'icon.html', 'grid.html', 'form.html', 'aside.html'],
                 templates: [],
-                asides: ['features.html', 'profiles.html']
+                asides: ['features.html', 'left.html', 'right.html']
             }
         });
     </script>
