New example of layout

--- a/examples/test/app/resources/asides/features.html
+++ b/examples/test/app/resources/asides/features.html
@@ -4,7 +4,16 @@
         <ul>
             <!-- Basic Layout -->
             <li class="current">
-                <a href="#list" class="current" data-target="section">
+                <a href="#main-article" data-target="article">
+                    <div class="bubble right">8</div>
+                    <strong>Presentation</strong>
+                    <small>Indented, Scroll</small>
+                </a>
+            </li>
+
+            <!-- Basic Layout -->
+            <li>
+                <a href="#layout" data-target="section">
                     <div class="bubble right">8</div>
                     <strong>Layout</strong>
                     <small>Indented, Scroll</small>
