--- a/examples/test/app/resources/sections/aside.html
+++ b/examples/test/app/resources/sections/aside.html
@@ -1,5 +1,5 @@
-<section id="asides">
-    <header data-back="home" data-title="Aside"></header>
+<section id="aside" data-target="slide">
+    <header data-back="home" data-title="Asides"></header>
     <article id="aside-example" class="indented">
         <div>
             <a href="#left" data-target="aside" data-icon="left" class="button big blue">Example of normal aside</a>
