--- a/examples/test/kitchensink.html
+++ b/examples/test/kitchensink.html
@@ -97,7 +97,7 @@
             </nav> -->
 
 
-        <article id="art-1" class="list">
+        <article id="main-article" class="list">
 
 
         </article>
@@ -151,7 +151,7 @@
             version: '2.0',
             sugars: ['map', 'pull'],
             resources: {
-                sections: [ 'notification.html', 'list.html', 'icon.html', 'grid.html', 'form.html', 'aside.html'],
+                sections: [ 'layout.html', 'notification.html', 'list.html', 'icon.html', 'grid.html', 'form.html', 'aside.html'],
                 templates: [],
                 asides: ['features.html', 'left.html', 'right.html']
             }
