--- a/examples/test/app/resources/asides/features.html
+++ b/examples/test/app/resources/asides/features.html
@@ -22,7 +22,7 @@
 
             <!-- List -->
             <li>
-                <a href="#list" data-target="section" data-count="3">
+                <a href="#list" data-target="section" data-count="17">
                     <strong>Lists</strong>
                     <small>Indented, Scroll</small>
                 </a>
@@ -40,7 +40,7 @@
             <!-- Icons -->
             <li>
                 <a href="#icon" data-target="section">
-                    <div class="bubble right">8</div>
+                    <div class="bubble right">109</div>
                     <strong>Icons</strong>
                     <small>Messages, skskks</small>
                 </a>
@@ -73,12 +73,13 @@
                     <small>Indented, Scroll</small>
                 </a>
             </li>
-            <!-- Buttons -->
+
+            <!-- Touch Events -->
             <li>
-                <a href="#" data-target="section">
-                    <div class="bubble right">8</div>
-                    <strong>Icons</strong>
-                    <small>Indented, Scroll</small>
+                <a href="#touchevents" data-target="section">
+                    <div class="bubble right">19</div>
+                    <strong>Touch Events</strong>
+                    <small>Touch, Tap, Double-Tap, Swipe...</small>
                 </a>
             </li>
 
