Now data-target attribute is data-router
… in API JavaScript Lungo.Router...

--- a/examples/kitchen-sink/app/resources/asides/features.html
+++ b/examples/kitchen-sink/app/resources/asides/features.html
@@ -4,7 +4,7 @@
         <ul>
             <!-- Basic Layout -->
             <li class="current">
-                <a href="#main-article" data-target="article">
+                <a href="#main-article" data-router="article">
                     <strong>Meet the frameworks</strong>
                     <small>A brief summary of features.</small>
                 </a>
@@ -12,7 +12,7 @@
 
             <!-- Layout & Navigation -->
             <li>
-                <a href="#layout" data-target="section">
+                <a href="#layout" data-router="section">
                     <div class="bubble right">5</div>
                     <strong>Layout</strong>
                     <small>How to distribute the content in your app.</small>
@@ -21,7 +21,7 @@
 
             <!-- List -->
             <li>
-                <a href="#list" data-target="section" data-count="17">
+                <a href="#list" data-router="section" data-count="17">
                     <strong>Lists</strong>
                     <small>Different formats for creating lists.</small>
                 </a>
@@ -29,7 +29,7 @@
 
             <!-- Forms -->
             <li>
-                <a href="#form" data-target="section">
+                <a href="#form" data-router="section">
                     <div class="bubble right">8</div>
                     <strong>Form Elements</strong>
                     <small>Controls available in BETA version</small>
@@ -38,7 +38,7 @@
 
             <!-- Asides -->
             <li>
-                <a href="#aside" data-target="section">
+                <a href="#aside" data-router="section">
                     <div class="bubble right">8</div>
                     <strong>Asides</strong>
                     <small>The fashion element in all cool Apps</small>
@@ -47,7 +47,7 @@
 
             <!-- Data-Attributes -->
             <li>
-                <a href="#data" data-target="section">
+                <a href="#data" data-router="section">
                     <div class="bubble right">9</div>
                     <strong>Data-attributes</strong>
                     <small>Semantic links to create complex elements</small>
@@ -56,7 +56,7 @@
 
             <!-- Icons -->
             <li>
-                <a href="#icon" data-target="section">
+                <a href="#icon" data-router="section">
                     <div class="bubble right">109</div>
                     <strong>Icons</strong>
                     <small>A huge repository vectorized icons</small>
@@ -65,7 +65,7 @@
 
             <!-- Scrolls -->
             <li>
-                <a href="#scroll" data-target="section">
+                <a href="#scroll" data-router="section">
                     <div class="bubble right">2</div>
                     <strong>Scrolls</strong>
                     <small>Everything is scrollable</small>
@@ -74,7 +74,7 @@
 
             <!-- Touch Events -->
             <li>
-                <a href="#touchevents" data-target="section">
+                <a href="#touchevents" data-router="section">
                     <div class="bubble right">19</div>
                     <strong>Touch Events</strong>
                     <small>Touch, Tap, Double-Tap, Swipe...</small>
@@ -83,7 +83,7 @@
 
             <!-- Notifications -->
             <li>
-                <a href="#notification" data-target="section">
+                <a href="#notification" data-router="section">
                     <div class="bubble right">8</div>
                     <strong>Notifications</strong>
                     <small>Cross-device notification system</small>
@@ -92,7 +92,7 @@
 
             <!-- Colours -->
             <li>
-                <a href="#color" data-target="section" data-title="Colours">
+                <a href="#color" data-router="section" data-title="Colours">
                     <div class="bubble right">14</div>
                     <strong>Colors</strong>
                     <small>Everything is more beautiful if you put a color.</small>
@@ -101,7 +101,7 @@
 
             <!-- Grid System -->
             <li>
-                <a href="#grid" data-target="section">
+                <a href="#grid" data-router="section">
                     <strong>Grid System</strong>
                     <small>System percentage dimension</small>
                 </a>
