--- a/examples/kitchen-sink/app/resources/asides/left.html
+++ b/examples/kitchen-sink/app/resources/asides/left.html
@@ -3,7 +3,7 @@
     <article class="list">
         <ul>
             <li>
-                <a href="#aside-example" data-target="article" data-icon="user">
+                <a href="#aside-example" data-router="article" data-icon="user">
                     <strong>Tap to close</strong>
                     <small>Lorem ipsum dolor sit amet.</small>
                 </a>
