--- a/examples/kitchen-sink/app/resources/asides/right.html
+++ b/examples/kitchen-sink/app/resources/asides/right.html
@@ -1,7 +1,7 @@
 <aside id="right" class="right small">
     <nav>
-        <a href="#aside-example" data-target="article" class="current" data-icon="clock"></a>
-        <a href="#aside-example" data-target="article" data-icon="user" data-count="14"></a>
-        <a href="#aside-example" data-target="article" data-icon="pushpin"></a>
+        <a href="#aside-example" data-router="article" class="current" data-icon="clock"></a>
+        <a href="#aside-example" data-router="article" data-icon="user" data-count="14"></a>
+        <a href="#aside-example" data-router="article" data-icon="pushpin"></a>
     </nav>
 </aside>
