--- a/examples/kitchen-sink/app/resources/sections/aside.html
+++ b/examples/kitchen-sink/app/resources/sections/aside.html
@@ -1,13 +1,13 @@
-<section id="aside" data-target="slide">
+<section id="aside" data-router="slide">
     <header data-title="Asides">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
     <article id="aside-example" class="indented">
         <div>
-            <a href="#left" data-target="aside" data-icon="left" class="button big blue">Example of normal aside</a>
-            <a href="#right" data-target="aside" data-icon="right" class="button big red">Example of mini right aside</a>
+            <a href="#left" data-router="aside" data-icon="left" class="button big blue">Example of normal aside</a>
+            <a href="#right" data-router="aside" data-icon="right" class="button big red">Example of mini right aside</a>
         </div>
     </article>
 </section>
