--- a/examples/kitchen-sink/app/resources/sections/layout.html
+++ b/examples/kitchen-sink/app/resources/sections/layout.html
@@ -1,26 +1,26 @@
 <section id="layout" data-transition="slide">
     <header data-title="Layout" class="extended">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
         <nav class="right button">
-            <a href="#splash" data-target="section" data-icon="user" data-label="Splash"></a>
+            <a href="#splash" data-router="section" data-icon="user" data-label="Splash"></a>
         </nav>
     </header>
 
     <nav class="groupbar">
-        <a href="#layout-art1" data-target="article" class="current" data-label="Profile"></a>
-        <a href="#layout-art2" data-target="article" data-label="Inbox" data-count="3"></a>
-        <a href="#layout-art3" data-target="article" data-label="Map"></a>
-        <a href="#layout-art4" data-target="article" data-label="Settings"></a>
+        <a href="#layout-art1" data-router="article" class="current" data-label="Profile"></a>
+        <a href="#layout-art2" data-router="article" data-label="Inbox" data-count="3"></a>
+        <a href="#layout-art3" data-router="article" data-label="Map"></a>
+        <a href="#layout-art4" data-router="article" data-label="Settings"></a>
     </nav>
 
     <footer>
         <nav>
-            <a href="#layout-art1" data-target="article" class="current" data-icon="home"></a>
-            <a href="#layout-art2" data-target="article" data-icon="inbox" data-count="3"></a>
-            <a href="#layout-art3" data-target="article" data-icon="compass"></a>
-            <a href="#layout-art4" data-target="article" data-icon="settings"></a>
+            <a href="#layout-art1" data-router="article" class="current" data-icon="home"></a>
+            <a href="#layout-art2" data-router="article" data-icon="inbox" data-count="3"></a>
+            <a href="#layout-art3" data-router="article" data-icon="compass"></a>
+            <a href="#layout-art4" data-router="article" data-icon="settings"></a>
         </nav>
     </footer>
 
