--- a/examples/kitchen-sink/app/resources/sections/list.html
+++ b/examples/kitchen-sink/app/resources/sections/list.html
@@ -1,13 +1,13 @@
 <section id="list" data-transition="slide">
     <header data-title="Lists" class="extended">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
 
     <nav class="groupbar">
-        <a href="#list-normal" data-target="article" class="current" data-icon="checkmark" data-label="Normal"></a>
-        <a href="#list-indented" data-target="article" data-icon="close" data-label="Indented"></a>
+        <a href="#list-normal" data-router="article" class="current" data-icon="checkmark" data-label="Normal"></a>
+        <a href="#list-indented" data-router="article" data-icon="close" data-label="Indented"></a>
     </nav>
 
     <article id="list-normal" class="list scroll">
