--- a/examples/kitchen-sink/old_index.html
+++ b/examples/kitchen-sink/old_index.html
@@ -60,8 +60,8 @@
                 <label>Mail</label>
                 <input type="password" placeholder="Your password" id="txt-signup-password" value="">
                 <a href="#" class="button blue big" id="btn-signup-call" data-icon="checkmark">Signup</a>
-                <a href="#back" data-target="section" class="button red big" data-icon="close">Return to login</a>
-                <a href="#back" data-target="section" class="button green " data-icon="user">Return to login</a>
+                <a href="#back" data-router="section" class="button red big" data-icon="close">Return to login</a>
+                <a href="#back" data-router="section" class="button green " data-icon="user">Return to login</a>
             </form>
         </article>
     </section>
@@ -94,7 +94,7 @@
     <section id="a" data-transition="pop" >
         <header data-title="a">
             <nav class="right">
-                <a href="#baaaa" data-target="section">B</a>
+                <a href="#baaaa" data-router="section">B</a>
             </nav>
         </header>
         <article class="">
@@ -111,8 +111,8 @@
     <section id="sec-1"  class="popa" data-transition="slide">
         <header class="extended">
             <nav class="left">
-                <a href="#aside-controls" data-target="aside" data-icon="menu"></a>
-                <a href="#kitchen-sink-scroll" data-article="nav-2" data-target="aside" data-icon="heart" data-count="8"></a>
+                <a href="#aside-controls" data-router="aside" data-icon="menu"></a>
+                <a href="#kitchen-sink-scroll" data-article="nav-2" data-router="aside" data-icon="heart" data-count="8"></a>
             </nav>
             <div class="left">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
@@ -120,11 +120,11 @@
             </div>
             <nav class="right ">
                 <!--
-                <a href="#profiles" data-target="aside" data-label="User"></a>
-                <a href="#profiles" data-target="aside" data-icon="users" data-label="User"></a>
+                <a href="#profiles" data-router="aside" data-label="User"></a>
+                <a href="#profiles" data-router="aside" data-icon="users" data-label="User"></a>
                  -->
                  <a href="#" data-icon="cloud" id="btn-toggle-loading"></a>
-                <a href="#profiles" data-target="aside" data-icon="user" data-count="1"></a>
+                <a href="#profiles" data-router="aside" data-icon="user" data-count="1"></a>
             </nav>
 
             <nav class="right plain ">
@@ -134,29 +134,29 @@
         </header>
 
         <nav class="groupbar">
-            <a href="#nav-1" data-target="article" class="current"  data-icon="html5">&nbsp;Lists</a>
-            <a href="#nav-2" data-target="article" data-icon="calendar">&nbsp;Form</a>
+            <a href="#nav-1" data-router="article" class="current"  data-icon="html5">&nbsp;Lists</a>
+            <a href="#nav-2" data-router="article" data-icon="calendar">&nbsp;Form</a>
         </nav>
 
         <footer class="toolbar with-labels">
             <nav>
-                <a href="#nav-0" data-target="article" data-icon="refresh" class="current" data-label="loading">
+                <a href="#nav-0" data-router="article" data-icon="refresh" class="current" data-label="loading">
                     <span class="bubble count" data-loading="white"></span>
                 </a>
-                <a href="#nav-1" data-target="article" data-title="d" data-icon="settings" data-label="boxes" data-count="1"></a>
-                <a href="#nav-2" data-target="article" data-title="b" data-icon="close" data-count="12" data-label="Form"></a>
-                <a href="#nav-3" data-target="article" data-title="c"  data-icon="share" data-label="Emails" data-count="123"></a>
-                <a href="#nav-4" data-target="article" data-title="lists" data-label="lists" data-loading="white"></a>
+                <a href="#nav-1" data-router="article" data-title="d" data-icon="settings" data-label="boxes" data-count="1"></a>
+                <a href="#nav-2" data-router="article" data-title="b" data-icon="close" data-count="12" data-label="Form"></a>
+                <a href="#nav-3" data-router="article" data-title="c"  data-icon="share" data-label="Emails" data-count="123"></a>
+                <a href="#nav-4" data-router="article" data-title="lists" data-label="lists" data-loading="white"></a>
             </nav>
         </footer>
 
         <!--
         <footer class="toolbar">
             <nav>
-                <a href="#nav-1" data-target="article" class="current"  data-icon="clock"></a>
-                <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17"></a>
-                <a href="#a" data-target="article" data-icon="mail" data-count="124"></a>
-                <a href="#a" data-target="article" data-icon="phone" data-count="12"></a>
+                <a href="#nav-1" data-router="article" class="current"  data-icon="clock"></a>
+                <a href="#nav-2" data-router="article" data-icon="calendar" data-count="17"></a>
+                <a href="#a" data-router="article" data-icon="mail" data-count="124"></a>
+                <a href="#a" data-router="article" data-icon="phone" data-count="12"></a>
             </nav>
         </footer>
         -->
@@ -328,7 +328,7 @@
 
         <article id="nav-3" class="list indented">
             <div>
-                <a href="#sec-2" data-target="section" class="button big" data-icon="check">Test 2</a>
+                <a href="#sec-2" data-router="section" class="button big" data-icon="check">Test 2</a>
                 <a href="#sec-2"  class="button big red " data-icon="check">Test 2</a>
                 <a href="#sec-2" class="button big green" data-icon="check">Test 2</a>
             </div>
@@ -339,7 +339,7 @@
     <section id="sec-2" data-transition="pop">
         <header data-title="Auto title centered">
             <nav class="left">
-                <a href="#back" data-target="section" class="cancel" data-icon="close" data-label="CANCEL"></a>
+                <a href="#back" data-router="section" class="cancel" data-icon="close" data-label="CANCEL"></a>
             </nav>
 
             <nav class="right ">
