--- a/examples/kitchen-sink/app/resources/sections/color.html
+++ b/examples/kitchen-sink/app/resources/sections/color.html
@@ -1,7 +1,7 @@
 <section id="color" data-transition="slide">
     <header data-title="Colors">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
     <article class="scroll indented">
