--- a/examples/kitchen-sink/app/resources/sections/data-attribute.html
+++ b/examples/kitchen-sink/app/resources/sections/data-attribute.html
@@ -1,7 +1,7 @@
 <section id="data" data-transition="slide">
     <header data-title="Data Attributes">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
 
