--- a/examples/kitchen-sink/app/resources/sections/icon.html
+++ b/examples/kitchen-sink/app/resources/sections/icon.html
@@ -1,13 +1,13 @@
 <section id="icon" data-transition="slide">
     <header class="extended" data-title="Icons Repository">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
 
     <nav class="groupbar">
-        <a href="#icons-default" data-target="article" data-label="Normal" data-count="72" class="current"></a>
-        <a href="#icons-brands" data-target="article" data-label="Brands" data-count="37" ></a>
+        <a href="#icons-default" data-router="article" data-label="Normal" data-count="72" class="current"></a>
+        <a href="#icons-brands" data-router="article" data-label="Brands" data-count="37" ></a>
     </nav>
 
     <article id="icons-default" class="list scroll indented">
