--- a/examples/kitchen-sink/app/resources/sections/notification.html
+++ b/examples/kitchen-sink/app/resources/sections/notification.html
@@ -1,7 +1,7 @@
 <section id="notification" data-transition="slide">
     <header data-title="Notifications">
         <nav class="button">
-            <a href="#back" data-target="section" data-label="back"></a>
+            <a href="#back" data-router="section" data-label="back"></a>
         </nav>
     </header>
 
