--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -51,7 +51,7 @@
     <section id="main" data-transition="slide">
         <header  class="">
             <nav class="left button">
-                <a href="#features" data-target="aside" data-icon="menu"></a>
+                <a href="#features" data-router="aside" data-icon="menu"></a>
             </nav>
             <nav class="right button">
                 <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="share" target="_blank" ></a>
