Fix data-transition in section.aside

--- a/examples/kitchen-sink/app/resources/sections/aside.html
+++ b/examples/kitchen-sink/app/resources/sections/aside.html
@@ -1,4 +1,4 @@
-<section id="aside" data-router="slide">
+<section id="aside" data-transition="slide">
     <header data-title="Asides">
         <nav class="button">
             <a href="#back" data-router="section" data-label="back"></a>
