data-event="drag"

--- a/examples/kitchen-sink/app/resources/sections/touchevents.html
+++ b/examples/kitchen-sink/app/resources/sections/touchevents.html
@@ -14,9 +14,9 @@
             <li data-event="tap" id="prueba"><strong>Tap me!</strong></li>
             <li data-event="doubleTap"><strong>doubleTap me!</strong></li>
             <li data-event="hold"><strong>hold me!</strong></li>
-            <li data-event="Drag">
+            <li data-event="drag">
                 <strong>Drag me!</strong>
-                <small>Swipe with 2 (or more) fingers</small></li>
+            </li>
 
             <li data-event="swipe">
                 <strong>Swipe me!</strong>
