--- a/examples/kitchen-sink/app/resources/sections/touchevents.html
+++ b/examples/kitchen-sink/app/resources/sections/touchevents.html
@@ -10,7 +10,7 @@
         <div class="eight rows list scroll">
         <ul>
             <li class="anchor">Test events in your Mobile Device</li>
-            <li data-event="touch"><strong>Touch me!</strong></li>
+            <!-- <li data-event="touch"><strong>Touch me!</strong></li> -->
             <li data-event="tap" id="prueba"><strong>Tap me!</strong></li>
             <li data-event="doubleTap"><strong>doubleTap me!</strong></li>
             <li data-event="hold"><strong>hold me!</strong></li>
