--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -57,8 +57,11 @@
                 <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="share" target="_blank" ></a>
             </nav>
             <div class="left">
-                <span class="title">Lungo Framework</span>
-            </div>
+                <div class="centered title with-subtitle">
+                    Lungo Framework
+                    <small class="subtitle">version 2</small>
+                </div>
+                </div>
         </header>
 
         <article id="main-article" class="list indented scroll">
