--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -66,6 +66,10 @@
 
         <article id="main-article" class="list indented scroll">
             <ul>
+                <li class="contrast " data-loading="white">
+
+                </li>
+
                 <li class="contrast">
                     <strong>
                     A framework for developers who want to design, build and share cross device apps.
